--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "google-spreadsheet": "^3.3.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +24,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/google-spreadsheet": "^3.3.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
